crates/vexor-compiler/tests/golden/error/input/range.vx
// step goes down but end is higher
val items = [5, 4..10]
val r = match items {
  x : _ => x
}
export Circle(r)
